--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meteor-application-template",
+  "name": "get good",
   "private": true,
   "scripts": {
     "start": "meteor --settings ../config/settings.development.json",
